fixed vertical alignment

--- a/src/app/components/loe-icon/loe-icon.component.css
+++ b/src/app/components/loe-icon/loe-icon.component.css
@@ -35,6 +35,7 @@
     flex-flow: row-reverse;
     align-items: center;
     justify-content: flex-start;
+    height: 100%;
 }
 
 .loe_system
